Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29741

SHOW BINLOG EVENTS shows garbage with system_versioning_insert_history=on

    XMLWordPrintable

Details

    Description

      Hopefully it's a the same problem as MDEV-29732

      --source include/have_log_bin.inc
       
      set system_versioning_insert_history=1;
       
      CREATE TABLE t (a INT);
      SHOW BINLOG EVENTS;
       
      DROP TABLE t;
      

      bb-10.11-MDEV-16546 2b1d32429

      master-bin.000001	329	Gtid	1	371	GTID 0-1-1
      master-bin.000001	371	Query	1	469	use `test`; se; CREATE TABLE t (a INT)
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.