MDEV-29741 SHOW BINLOG EVENTS shows garbage with system_versioning_insert_history=on